suppression/archivage de perso OK
