# routes/openquest.route.js
@@ -5,7 +5,7 @@ const checkTokenMiddleware = require('../controllers/jwt.controller');
 const openquestController = require("../controllers/openquest.controller");
 
 //POST
-router.post('/magic/:dataName', openquestController.register);
+router.post('/magic/:dataName',checkTokenMiddleware.checkTokenAdmin, openquestController.register); //utilisé pour remplir la base de données
 router.post('/character/',checkTokenMiddleware.checkToken, openquestController.createCharacter);
 
 //GET
@@ -14,5 +14,6 @@ router.get('/get/:type', openquestController.getFromDatabase);
 
 //DELETE
 router.delete('/character/:id',checkTokenMiddleware.checkToken, openquestController.deleteCharacter )
+router.delete('/character/delete/:id',checkTokenMiddleware.checkTokenAdmin, openquestController.deleteCharacter )
 
 module.exports = router;
